--- a/assets/styles.css
+++ b/assets/styles.css
@@ -160,3 +160,40 @@ select {
 .btn:hover {
     background-color: var(--hover-color);
 }
+
+/* disease input */
+
+.upload {
+    justify-content: center;
+    align-items: center;    
+}
+
+input[type=file] {
+    margin-top: 20px;
+    width: 100%;
+    height: 100px;
+    padding:30px;
+    background: #fff;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+input[type=file]::file-selector-button {
+    height: 40px;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    border-radius: 10px;
+    color: #2DBB55;
+    cursor: pointer; 
+    font-size: 1rem;
+    font-weight: 600;
+    outline: none;
+    font-family: "Poppins", sans-serif;
+  }
