--- a/assets/home.css
+++ b/assets/home.css
@@ -13,12 +13,16 @@
     --hover-color: #1d8d3d;
 }
 
-[data-theme="dark"] {
+.dark-theme {
     --primary-color: #2DBB55;
     --bg-color: #FFFFFF;
     --text-color: #0D1721;
     --secondary-color: #F2F2F2;
     --hover-color: #1d8d3d;
+}
+
+html    {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -82,6 +86,15 @@ nav .logo span {
 
 .nav_links li a:hover {
     color: var(--primary-color);
+}
+
+.toggle-btn     {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: var(--text-color);
+    font-size: 1.5rem;
 }
 
 
@@ -153,6 +166,64 @@ nav .logo span {
     color: var(--text-color);
     margin-bottom: 30px;
 }
+
+/* carousel section */
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(2,100%);
+    overflow:hidden;
+    scroll-behavior: smooth;
+}  
+    #section1,#section2{
+      width: 100%;
+      position: relative;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      margin: 20px 0;
+    }
+      .item {
+        padding: 0 2px;
+        transition: 250ms all;
+      }
+    .item:hover { 
+          margin: 0 40px;
+          transform: scale(1.2);
+        }
+        
+        .item img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      
+      
+      .arrow__btn {
+        position: absolute;
+        color: #192C32;
+        text-decoration: none;
+        font-size: 6em;
+        /* background:rgb(0,0,0); */
+        width: 80px;
+        padding: 20px;
+        text-align: center;
+        z-index: 1;
+      }
+    .arrow__btn:nth-of-type(1) {
+          top:30%;
+           left:0;
+          /* background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%); */
+        }
+    .arrow__btn:nth-of-type(2) {
+          top:30%;  right: 0;
+          /* background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%); */
+        }
+        
+      
+  @media only screen and (max-width: 600px) {
+    a.arrow__btn {
+      display:none;
+    }
+  }
 
 /* services section */
 
