--- a/assets/home.css
+++ b/assets/home.css
@@ -7,17 +7,17 @@
 
 :root {
   --primary-color: #2dbb55;
-  --bg-color: #192c32;
-  --secondary-color: #0d1721;
-  --text-color: #ffffff;
+  --bg-color: #ffffff;
+  --text-color: #0d1721;
+  --secondary-color: #f2f2f2;
   --hover-color: #1d8d3d;
 }
 
 .dark-theme {
   --primary-color: #2dbb55;
-  --bg-color: #ffffff;
-  --text-color: #0d1721;
-  --secondary-color: #f2f2f2;
+  --bg-color: #192c32;
+  --secondary-color: #0d1721;
+  --text-color: #ffffff;
   --hover-color: #1d8d3d;
 }
 
@@ -46,7 +46,7 @@ a {
 nav {
   width: 100%;
   height: 80px;
-  background-color: var(--bg-color);
+  background-color: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -56,7 +56,7 @@ nav {
 nav .logo {
   font-size: 1.5rem;
   font-weight: 700;
-  color: var(--text-color);
+  color: #fff;
   text-transform: uppercase;
 }
 
@@ -79,7 +79,7 @@ nav .logo span {
 }
 
 .nav_links li a {
-  color: var(--text-color);
+  color: #fff;
   transition: all 0.3s ease;
 }
 
@@ -92,7 +92,7 @@ nav .logo span {
   border: none;
   outline: none;
   cursor: pointer;
-  color: var(--text-color);
+  color: #fff;
   font-size: 1.5rem;
 }
 
@@ -101,16 +101,16 @@ nav .logo span {
   height: 90vh;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   padding: 0 8%;
-  background-color: #1e1e1e;
+  background-color: transparent;
 }
 
 .title h1 {
   font-size: 3rem;
   font-weight: 700;
-  color: var(--text-color);
+  color: #fff;
   text-transform: uppercase;
   margin-bottom: 0;
 }
@@ -118,9 +118,11 @@ nav .logo span {
 .title p {
   font-size: 1.2rem;
   font-weight: 500;
-  color: var(--text-color);
+  color: #fff;
   margin-bottom: 30px;
+  text-align: center;
 }
+
 
 .predict_btn {
   width: fit-content;
@@ -128,12 +130,17 @@ nav .logo span {
   justify-content: center;
   align-items: center;
   background-color: var(--primary-color);
-  color: var(--text-color);
+  color: #fff;
   padding: 10px 20px;
   border-radius: 5px;
   text-transform: uppercase;
   font-weight: 700;
   transition: all 0.3s ease;
+  margin: 0 auto;
+}
+
+.service_btn  {
+  margin: 0;
 }
 
 /* motto section */
@@ -185,7 +192,6 @@ nav .logo span {
     grid-template-columns: repeat(3, 100%);
     overflow: hidden;
     scroll-behavior: smooth;
-    
 }
 .wrapper section {
     width: 100%;
@@ -212,7 +218,7 @@ nav .logo span {
 
 .wrapper section a {
     position: absolute;
-    color: #fff;
+    color: #0d1721;
     text-decoration: none;
     font-size: 6em;
     width: 80px;
@@ -345,7 +351,7 @@ nav .logo span {
 .contact h1 {
   font-size: 2rem;
   font-weight: 700;
-  color: var(--text-color);
+  color: #fff;
   margin-bottom: 0;
   padding-bottom: 10px;
 }
@@ -353,7 +359,7 @@ nav .logo span {
 .contact p {
   font-size: 1rem;
   font-weight: 500;
-  color: var(--text-color);
+  color: #fff;
   margin-bottom: 30px;
   width: 30%;
   text-align: center;
