--- a/assets/results.css
+++ b/assets/results.css
@@ -6,20 +6,20 @@
 }
 
 :root {
-    --primary-color: #2DBB55;
-    --bg-color: #192C32;
-    --secondary-color: #0D1721;
-    --text-color: #FFFFFF;
+    --primary-color: #2dbb55;
+    --bg-color: #ffffff;
+    --text-color: #0d1721;
+    --secondary-color: #f2f2f2;
     --hover-color: #1d8d3d;
-}
-
-[data-theme="dark"] {
-    --primary-color: #2DBB55;
-    --bg-color: #FFFFFF;
-    --text-color: #0D1721;
-    --secondary-color: #F2F2F2;
+  }
+  
+  .dark-theme {
+    --primary-color: #2dbb55;
+    --bg-color: #192c32;
+    --secondary-color: #0d1721;
+    --text-color: #ffffff;
     --hover-color: #1d8d3d;
-}
+  }
 
 a{
     text-decoration: none;
@@ -47,11 +47,19 @@ nav {
 nav .logo {
     font-size: 1.5rem;
     font-weight: 700;
-    color: var(--text-color);
+    color: #fff;
     text-transform: uppercase;
 }
 
 
+.toggle-btn {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 1.5rem;
+  }
 nav .logo span {
     color: var(--primary-color);
 }
@@ -71,7 +79,7 @@ nav .logo span {
 }
 
 .nav_links li a {
-    color: var(--text-color);
+    color: #fff;
     transition: all 0.3s ease;
 }
 
@@ -79,10 +87,19 @@ nav .logo span {
     color: var(--primary-color);
 }
 
-
+main   {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    color: #fff;
+}
 .result {
     width: 85%;
-    height: 90vh;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,7 +116,7 @@ nav .logo span {
 }
 
 h1  {
-    width: 60%;
+    width: 70%;
     margin: 0 auto 30px;
 }
 
@@ -139,11 +156,12 @@ table td {
 
 .home_btn {
     background-color: var(--primary-color);
-    color: var(--text-color);
+    color:#fff;
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 1rem;
     font-weight: 600;
     text-transform: uppercase;
     transition: all 0.3s ease;
+   
 }
