--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,19 +6,21 @@
 }
 
 :root {
-    --primary-color: #2DBB55;
-    --bg-color: #192C32;
-    --secondary-color: #0D1721;
-    --text-color: #FFFFFF;
-    --hover-color: #1d8d3d;
+  --primary-color: #2dbb55;
+  --bg-color: #ffffff;
+  --text-color: #0d1721;
+  --secondary-color: #f2f2f2;
+  --hover-color: #1d8d3d;
+  --form-bg: #c2c2c2;
 }
 
-[data-theme="dark"] {
-    --primary-color: #2DBB55;
-    --bg-color: #FFFFFF;
-    --text-color: #0D1721;
-    --secondary-color: #F2F2F2;
-    --hover-color: #1d8d3d;
+.dark-theme {
+  --primary-color: #2dbb55;
+  --bg-color: #192c32;
+  --secondary-color: #0d1721;
+  --text-color: #ffffff;
+  --hover-color: #1d8d3d;
+    --form-bg: #0d1721;
 }
 
 body {
@@ -128,6 +130,14 @@ nav .logo span {
     outline: var(--primary-color) solid 2px;;
 }
 
+.toggle-btn {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: var(--text-color);
+    font-size: 1.5rem;
+  }
 select {
     width: 100%;
     height: 2.5rem;
